# Web-based-profiler-example

./: .gitignore  README
app/: main.cpp  mongoose.c  stats.h  wserv.cpp  wserv.h
app/mk/: CMakeLists.txt
web/: index.html
